--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-social-icons": "^6.6.0"
+    "react-social-icons": "^6.6.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
 }
